# service-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
agent/: __init__.py  core.py  llm.py  memory.py  react_agent.py
agent/tools/: __init__.py  agent_tools.py  middleware.py
config/: __init__.py  chroma.yml  models.py  rag.yml
model/: factory.py
rag/: __init__.py  rag_service.py  retriever.py  vector_store.py
src/service_agent/: __init__.py  app.py
src/service_agent/agent/: __init__.py  core.py  llm.py  memory.py
src/service_agent/config/: __init__.py  settings.py
src/service_agent/rag/: __init__.py  retriever.py
src/service_agent/tools/: __init__.py  base.py  builtin.py
tests/: test_core.py  test_tools.py
tools/: __init__.py  base.py  builtin.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
