[project]
name = "service-agent"
version = "0.1.0"
description = "智扫通 · 智能客服 Agent —— 基于 LangChain ReAct Agent + RAG 检索增强"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "openai>=1.40.0",
    "dashscope>=1.17.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "model", "rag", "utils"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
